--- a/SistemaVentasBatia/ClientApp/src/app/widgets/cerrarcotizacion/cerrarcotizacion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/cerrarcotizacion/cerrarcotizacion.widget.html
@@ -29,7 +29,7 @@
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" (click)="guarda()" class="btn btn-outline-success"><i class="fa-solid fa-check"></i> Cerrar cotización</button>
+                    <button type="button" (click)="guarda()" class="btn btn-outline-success" [disabled]="isLoading"><i class="fa-solid fa-check"></i> Cerrar cotización</button>
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
