--- a/SistemaVentasBatia/ClientApp/src/app/widgets/direccion/direccion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/direccion/direccion.widget.html
@@ -87,11 +87,12 @@
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" (click)="guarda()" class="btn btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
+                    <button type="button" (click)="guarda()" class="btn btn-outline-success" [disabled]="isLoading"><i class="fa-solid fa-save"></i> Guardar</button>
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<carga-widget></carga-widget>
 <toast-widget></toast-widget>
