--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
@@ -132,13 +132,13 @@
                                     <button type="button" (click)="actualizarImmsJornada()" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
                                 </div>
                                 <!--<div class="col-sm-3 col-3 pb-3">
-        <span class="badge">IMSS Base (MXN):</span>
-        <input type="number" #imsstxt class="form-control aliggn-content-center text-center transparent-background" id="imss" name="imss" value="{{ imss }}" [(ngModel)]="imss" placeholder="{{ imss }}" autocomplete="off" required>
-    </div>
-    <div class="col-sm-3 col-3 text-center">
-        <span class="badge"></span>
-        <button type="button" (click)="updImss()" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
-    </div>-->
+                                    <span class="badge">IMSS Base (MXN):</span>
+                                    <input type="number" #imsstxt class="form-control aliggn-content-center text-center transparent-background" id="imss" name="imss" value="{{ imss }}" [(ngModel)]="imss" placeholder="{{ imss }}" autocomplete="off" required>
+                                </div>
+                                <div class="col-sm-3 col-3 text-center">
+                                    <span class="badge"></span>
+                                    <button type="button" (click)="updImss()" class="btn  btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
+                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -199,15 +199,15 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                </div>
-                                <div class="row mt-3">
-                                    <div class="col d-flex justify-content-end">
-                                        <button type="button" (click)="openSer()" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar servicio</button>
-                                    </div>
-                                </div>
-                                <br>
                             </div>
+                            <div class="row mt-3">
+                                <div class="col d-flex justify-content-end">
+                                    <button type="button" (click)="openSer()" class="btn  btn-outline-primary" id="btnCrearProspecto"><i class="fa-solid fa-plus"></i> Agregar servicio</button>
+                                </div>
+                            </div>
+                            <br>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -481,8 +481,8 @@
                                             <div class="col-md-4 col-sm-6 col-3">
                                                 <span class="ms-2">Puesto</span>
                                             </div>
-                                            
-                                            
+
+
                                         </div>
                                     </th>
                                     <th></th>
@@ -506,8 +506,8 @@
                                                 <span class="badge d-md-none">Puesto:</span>
                                                 <div class="ms-2">{{ u.puesto }}</div>
                                             </div>
-                                            
-                                            
+
+
                                         </div>
                                     </td>
                                     <td class="w-auto">
@@ -573,13 +573,6 @@
                         </div>
                     </div>
                     <hr />
-                    <div *ngIf="isLoading || (model.productos && model.productos.length === 0)" class="row-12 text-center">
-                        <h6 *ngIf="isLoading">Cargando...</h6>
-                        <h6 *ngIf="!isLoading && model.productos && model.productos.length === 0">No se encontraron registros</h6>
-                    </div>
-                    <div *ngIf="isLoading" class="text-center ">
-                        <i class="fas fa-spinner fa-spin fa-3x"></i>
-                    </div>
                     <div *ngIf="model.productos && model.productos.length > 0" class="table-container fade-in-container">
                         <table class="table table-striped table-responsive">
                             <thead class="sticky-top">
@@ -637,7 +630,7 @@
                     </div>
                     <div *ngIf="model.productos && model.productos.length > 0">
                         <div class="col-12 float-end col-md-3 text-end">
-                            <button type="button" id="btnProdDes" (click)="descargarListaProductosPorEstado()"  class="btn  btn-outline-info" [disabled]="isLoading" ><i class="fa-solid fa-download"></i> Descargar listado</button>
+                            <button type="button" id="btnProdDes" (click)="descargarListaProductosPorEstado()" class="btn  btn-outline-info" [disabled]="isLoading"><i class="fa-solid fa-download"></i> Descargar listado</button>
                             <span style="margin-right: 10px;"></span>
                         </div>
                         <br />
@@ -656,5 +649,6 @@
 <producto-widget [idP]="selPuesto" [grupo]="grupo" (saveEvent)="closeMat($event)"></producto-widget>
 <agregarservicio-widget (serEvent)="reloadServicios()"></agregarservicio-widget>
 <usuarioadd-widget (actualizarUsuarios)="obtenerUsuarios()"></usuarioadd-widget>
-<elimina-widget [titulo]="" [mensaje]="" (ansEvent)="eliminarUsuario($event)"></elimina-widget>
 <toast-widget></toast-widget>
+<carga-widget></carga-widget>
+<confirmacion-widget (confirmaEvent)="confirmacionEvent($event)"></confirmacion-widget>
