--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
@@ -77,13 +77,13 @@
                     <div class="col-md-3 col-sm-6 col-4" *ngFor="let d of docs">
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" id="d.nom" [value]="d.id" [(ngModel)]="d.act" /> {{ d.nom }} 
+                                <input class="form-check-input" type="checkbox" id="d.nom" [value]="d.id" [(ngModel)]="d.act" /> {{ d.nom }}
                             </label><br />
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 col-4">
                         <div class="float-end">
-                            <button type="button" (click)="guarda()" class="btn btn-outline-success" id="btnGuardarProspecto"><i class="fa-solid fa-save"></i> Guardar</button>
+                            <button type="button" (click)="guarda()" class="btn btn-outline-success" id="btnGuardarProspecto" [disabled]="isLoading"><i class="fa-solid fa-save"></i> Guardar</button>
                         </div>
                     </div>
                 </div>
@@ -91,4 +91,5 @@
         </div>
     </div>
 </div>
+<carga-widget></carga-widget>
 <toast-widget></toast-widget>
