--- a/SistemaVentasBatia/ClientApp/src/app/widgets/editacotizacion/editacotizacion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/editacotizacion/editacotizacion.widget.html
@@ -47,7 +47,7 @@
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" (click)="guarda()" class="btn btn-outline-success"><i class="fa-solid fa-check"></i> Guardar</button>
+                    <button type="button" (click)="guarda()" class="btn btn-outline-success" [disabled]="isLoading"><i class="fa-solid fa-check"></i> Guardar</button>
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
@@ -56,3 +56,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <toast-widget></toast-widget>
+<carga-widget></carga-widget>
