--- a/SistemaVentasBatia/ClientApp/src/app/widgets/material/material.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/material/material.widget.html
@@ -8,12 +8,12 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4  class="modal-title">{{ tipo }} - <small class="text-muted">{{ puesto }} ({{ nombreSucursal }})</small></h4>
+                    <h4 class="modal-title">{{ tipo }} - <small class="text-muted">{{ puesto }} ({{ nombreSucursal }})</small></h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <div *ngIf="model.materialesCotizacion && model.materialesCotizacion.length > 0"  class="table-container fade-in-container shadow-sm">
+                    <div *ngIf="model.materialesCotizacion && model.materialesCotizacion.length > 0" class="table-container fade-in-container shadow-sm">
                         <table class="table table-striped table-responsive">
                             <thead class="sticky-top">
                                 <tr class="d-md-none">
@@ -81,7 +81,7 @@
                                             <button type="button" (click)="select(mat.idMaterialCotizacion)" class="btn btn-sm btn-outline-primary mb-1" data-bs-toggle="tooltip" title="Editar">
                                                 <i class="fa-solid fa-pencil fa-2x"></i>
                                             </button>
-                                            <button type="button" (click)="remove(mat.idMaterialCotizacion)" class="btn btn-sm btn-outline-danger mb-1" data-bs-toggle="tooltip" title="Descartar">
+                                            <button type="button" (click)="remove(mat.idMaterialCotizacion)" class="btn btn-sm btn-outline-danger mb-1" data-bs-toggle="tooltip" title="Descartar" [disabled]="isLoading">
                                                 <i class="fa-solid fa-times fa-2x"></i>
                                             </button>
                                         </div>
@@ -110,3 +110,4 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<carga-widget></carga-widget>
