--- a/SistemaVentasBatia/ClientApp/src/app/widgets/producto/producto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/producto/producto.widget.html
@@ -59,7 +59,7 @@
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" id="btnGuardarMaterial" (click)="guarda()" class="btn btn-outline-success"><i class="fa-solid fa-save"></i> Guardar</button>
+                    <button type="button" id="btnGuardarMaterial" (click)="guarda()" class="btn btn-outline-success" [ngClass]="{'disabled': isLoading == true}"><i class="fa-solid fa-save"></i> Guardar</button>
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
@@ -68,3 +68,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <toast-widget></toast-widget>
+<carga-widget></carga-widget>
