--- a/SistemaVentasBatia/ClientApp/src/app/widgets/toast/toast.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/toast/toast.widget.html
@@ -1,5 +1,5 @@
-<div class="position-fixed p-3" style="z-index: 1100; right: 0; top: 70px;">
-    <div id="glotoast" class="toast fade-in-out" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="position-fixed p-3" style="z-index: 1102; right: 0; top: 70px;">
+    <div id="glotoast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
