--- a/SistemaVentasBatia/ClientApp/src/app/widgets/usuarioadd/usuarioadd.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/usuarioadd/usuarioadd.widget.html
@@ -44,7 +44,7 @@
                             </div>
                             <div class="col-4 col-md-3 col-sm-2 mb-3">
                                 <div class="form-floating">
-                                    <input type="tel" class="form-control" [(ngModel)]="agregarusuario.telefono"id="txtTelefonoUsuario">
+                                    <input type="tel" class="form-control" [(ngModel)]="agregarusuario.telefono" id="txtTelefonoUsuario">
                                     <label for="txtTelefonoUsuario">Telefono</label>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
                             <div class="col-4 col-md-2 col-sm-4 mb-3">
                                 <div class="form-check mb-2">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" type="checkbox" [value]="agregarusuario.autorizaVentas" [(ngModel)]="agregarusuario.autorizaVentas" id="radioAdmnistraUsuario"/> Administrador
+                                        <input class="form-check-input" type="checkbox" [value]="agregarusuario.autorizaVentas" [(ngModel)]="agregarusuario.autorizaVentas" id="radioAdmnistraUsuario" /> Administrador
                                     </label><br />
                                     <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="Si se selecciona esta opción el usuario podrá ver y acceder a todas las cotizaciones">
                                         <i class="fa fa-info-circle"></i>
@@ -113,3 +113,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <toast-widget></toast-widget>
+<carga-widget></carga-widget>
