--- a/SistemaVentasBatia/ClientApp/src/styles.css
+++ b/SistemaVentasBatia/ClientApp/src/styles.css
@@ -575,9 +575,7 @@ input:focus::-webkit-input-placeholder {
 
 
 
-.fade-in-out {
-    animation: fadeInOut 0.2s ease-in-out;
-}
+
 
 @keyframes fadeInOut {
     0% {
@@ -622,15 +620,53 @@ table {
         padding-left: 0;
         padding-right: 0;
     }
+/*toast diseño*/
 
+.toast.toast-carga{
+    width: 300px;
+    height: 50px;
+}
 .toast-background {
-    background: linear-gradient(to right,rgba(74, 146, 254, 1), rgba(255, 255, 255, .02));
+    background: linear-gradient(to right,rgba(13, 110, 253, 1), rgba(255, 255, 255, .02));
     backdrop-filter: blur(5px);
     color: white;
     box-shadow: none;
     border: none;
 }
 
+.toast.show {
+    animation: fade-in 0.2s ease forwards;
+}
+
+.toast.hide {
+    animation: fade-out 0.2s ease forwards;
+}
+
+.fade-in-out {
+    animation: fade-in 0.2s ease forwards, fade-out 0.2s ease forwards;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+/*modal blur*/
 .modal.show::before {
     content: "";
     position: fixed;
@@ -651,6 +687,10 @@ table {
     100% {
         backdrop-filter: blur(2px)
     }
+}
+
+.no-click {
+    pointer-events: none;
 }
 
 
@@ -1043,6 +1083,7 @@ table {
         transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
         border: none;
     }
+
     .dark-theme .toast-background {
         background: linear-gradient(to right,rgba(21, 21, 21, 1), rgba(255, 255, 255, .02));
         backdrop-filter: blur(5px);
